# nfactorial-flowers

./: Dockerfile  pyproject.toml
app/: main.py
